some more refactorization